--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,17 +2,90 @@
 @import '../../styles/components/menu-bar.scss';
 @import '../../styles/abstracts/variables.scss';
 body{
-    background-color: $header-background-color;
-    height: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 10vh;
 
-    .menu-icon{
-        width: 30px;
-        height: auto;
-        padding: .8em;
-        transition: all 0.45s;
+    .header-container{
+        background-color: rgb(255, 255, 255);
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        .menu-icon{
+            width: 30px;
+            height: auto;
+            padding: .8em;
+            transition: all 0.45s;
+        }
+    }
+    .menu-card{
+       display: none;
+    }
+
+    
+}
+
+@media screen and (min-width:270px) and (max-width:680px) {
+    body{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        height: 10vh;
+
+        .container {
+            display: inline-block;
+            cursor: pointer;
+            padding: 1em;
+        }
+          
+        .bar1, .bar2, .bar3 {
+            width: 25px;
+            height: 2px;
+            background-color: #333;
+            margin: 6px 0;
+            transition: 0.4s;
+        }
+          
+        .change .bar1 {
+            transform: rotate(
+                -45deg
+                ) translate(-5px, 4px);
+            height: 1.5px;
+        }
+          
+        .change .bar2 {opacity: 0;}
+          
+        .change .bar3 {
+            transform: rotate(45deg) translate(-6px, -7px);
+            height: 1.5px;
+        }
+    }
+    .menu-card{
+        padding: 1rem 1rem;
+        box-shadow: 0px 30px 25px rgb(0 0 0 / 20%);
+        left: 0;
+        right: 0;
+        background: white;
+        z-index: 1;
+        display: grid;//inline-block;
+        position: absolute;
+
+        .menu-options-container{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            row-gap: .8rem;
+
+            p{
+                padding: .8rem;
+                font-size: $normal-font-size;
+                font-family: $body-font;
+                cursor: pointer;
+            }
+        }
     }
 }
