--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -37,10 +37,12 @@ body{
         .profile-image{
             /* glassMorphism */
             //padding-top: 2vw;
+            display: flex;
+            justify-content: center;
             > img{
-                width: 12vw;//170px;//200px;
+                width: calc(100% - 2.5vw);//12vw;//170px;//200px;
                 border-radius: 50%;
-                border: 5px solid rgba(0,0,0,0.25);
+                //border: 6px solid rgb(0 0 0 / 13%);
             }
         }
         .social-links{
@@ -193,7 +195,58 @@ body{
     }
   
 }
-@media screen and (max-width:580px) { //max-width:480px
+@media screen and (max-width:1180px) and (min-width:940px){
+    body{
+        .image-container{
+            /* glassMorphism */
+            display: flex;
+            position: relative;
+            flex-direction: column;
+            justify-content: space-around;
+            width: calc(100% - 120px);//20vw;
+            height: 28vw;//26vw;//30vw;
+            background: rgba(255,255,255,.05);
+            padding: 1rem .5rem;
+            align-items: center;//flex-start;
+            box-shadow: 0px 15px 35px rgba(0,0,0,0.2);
+            border-radius: 15px;
+            backdrop-filter: blur(10px);
+            .profile-image{
+                /* glassMorphism */
+                //padding-top: 2vw;
+                display: flex;
+                justify-content: center;
+                > img{
+                    width: calc(100% - 40px);//-50px//170px;//200px;
+                    border-radius: 50%;
+                    //border: 6px solid rgb(0 0 0 / 13%);
+                }
+                img:hover{
+                    transform: translate3D(0,-1px,0) scale(1.03);
+                    box-shadow: -5px 30px 20px -20px rgb(86 93 113 / 38%);
+                    transition: all .1s ease;
+                }
+            }
+            .social-links{
+                display: flex;
+                flex-direction: row;
+                gap: 20px;
+                img{
+                    width: 1.8vw;
+                }
+            }
+            
+        }
+        .image-animation::before{
+            margin-left: calc(100% - 90px);
+        }
+        .image-animation::after{
+            margin-top: calc(100% - 3vw);
+            margin-left: calc(100% - 28vw);
+        }
+    }
+}
+@media screen and (max-width:880px) { //max-width:680px
     body{
         display: flex;
         flex-direction: column-reverse;
@@ -205,12 +258,12 @@ body{
         font-size: $small-font-size;
         height: 100%;
         padding: $padding-1-2;
-
+        row-gap: 4vw;
         .about-me{
             display: flex;
             flex-direction: column;
             align-items: center;
-            row-gap: 1.5rem;
+            row-gap: calc(100% + 2rem);//1.5rem;
             text-align: center;
             width: 50vw;
 
@@ -250,9 +303,14 @@ body{
             .profile-image{
                 
                 > img{
-                    width: 140px;
+                    width: 170px;
                     border-radius: 50%;
                     border:none;
+                }
+                img:hover{
+                    transform: translate3D(0,-1px,0) scale(1.03);
+                    box-shadow: -5px 30px 20px -20px rgb(86 93 113 / 38%);
+                    transition: all .1s ease;
                 }
             }
             .social-links{
