--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,10 +8,10 @@
         <p>{{ introSubtitle }}</p>
       </div>
       <div class="tech-images">
-        <img src="../../../assets/AngularJS-Shield.svg" />
-        <img src="../../../assets/Typescript_logo_2020.svg.png" />
-        <img src="../../../assets/JavaScript-logo.png" />
-        <img src="../../../assets/sass-1.svg" />
+        <img src="./././assets/AngularJS-Shield.svg" />
+        <img src="./././assets/Typescript_logo_2020.svg.png" />
+        <img src="./././assets/JavaScript-logo.png" />
+        <img src="./././assets/sass-1.svg" />
       </div>
       <p>
         I am also huge fan of beautifully designed products and hence go extra
@@ -20,35 +20,30 @@
       <button class="download-resume-btn">
          Resume`
       </button>
-      <div class="scroll-down">
-        <img src="../../../assets/mouse-alt.svg" />
+      <!-- <div class="scroll-down">
+        <img src="./././assets/mouse-alt.svg" />
         <p>Scroll down</p>
-        <img src="../../../assets/arrow-down.svg" />
-      </div>
-    </div>
-    <!-- <div class="scroll-down">
-        <img src="../../../assets/mouse-alt.svg" />
-        <p>Scroll down</p>
-        <img src="../../../assets/arrow-down.svg" />
+        <img src="./././assets/arrow-down.svg" />
       </div> -->
+    </div>
   </div>
 
   <div class="image-animation">
     <div class="image-container">
       <div class="profile-image">
-        <img src="../../../assets/MaheshProfilePic-removebg-preview.jpg" />
+        <img src="./././assets/MaheshProfilePic-removebg-preview.jpg" />
       </div>
       <div class="social-links">
         <div>
           <a
             href="https://www.linkedin.com/in/mahesh-rokade-49114720b/"
             target="_blank"
-            ><img src="../../../assets/linkedin-alt.svg"
+            ><img src="./././assets/linkedin-alt.svg"
           /></a>
         </div>
         <div>
           <a href="https://github.com/Mahesh5R" target="_blank"
-            ><img src="../../../assets/github.svg"
+            ><img src="./././assets/github.svg"
           /></a>
         </div>
       </div>
