--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -247,12 +247,13 @@ body{
         font-size: $small-font-size;
         height: 100%;
         padding: $padding-1-2;
-        row-gap: 4vw;
+        row-gap: 3vw;
+        margin-top: 5.5vh;
         .about-me{
             display: flex;
             flex-direction: column;
             align-items: center;
-            row-gap: calc(100% + 2rem);//1.5rem;
+            row-gap: calc(100% + 2rem);//1rem;
             text-align: center;
             width: 50vw;
 
