fix(skills,home): skills image path modified and home media queries modified

--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -6,7 +6,7 @@
   <div class="skills-container">
     <div class="skills-options blue-ball-first">
       <div class="skill-title">
-        <img src="../../../assets/brackets-curly.svg" alt="" />
+        <img src="./././assets/brackets-curly.svg" alt="" />
         <p style="font-weight: 600;font-size: 1.2rem;">Frontend developer</p>
       </div>
       <div class="language-container">
@@ -44,7 +44,7 @@
     </div>
     <div class="skills-options blue-ball-second">
       <div class="skill-title">
-        <img src="../../../assets/server-network.svg" alt="" />
+        <img src="./././assets/server-network.svg" alt="" />
         <p>Backend developer</p>
       </div>
       <div class="language-container">
