--- a/src/app/pages/skills/skills.component.scss
+++ b/src/app/pages/skills/skills.component.scss
@@ -87,7 +87,7 @@ body{
 }
 @media screen and (max-width:880px) { 
     body{
-        margin-top: 18vh;
+        margin-top: 2vw;//18vh;
         margin-bottom: 2rem;
         .main-title{
             font-size: 1.9rem;
