--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -246,9 +246,9 @@ body{
         color: #555;
         font-size: $small-font-size;
         height: 100%;
-        padding: $padding-1-2;
+        //padding: $padding-1-2;
         row-gap: 3vw;
-        margin-top: 5.5vh;
+        //margin-top: 5.5vh;
         .about-me{
             display: flex;
             flex-direction: column;
@@ -293,7 +293,7 @@ body{
             .profile-image{
                 
                 > img{
-                    width: 170px;
+                    width: 150px;
                     border-radius: 50%;
                     border:none;
                 }
@@ -333,5 +333,11 @@ body{
             transition: .4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
             cursor: pointer;
         }
+    }
+}
+
+@media screen and (max-width:380px){
+    body{
+        padding: 14vw 2vw 0 2vw;
     }
 }
