--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -45,7 +45,7 @@
     <div class="skills-options blue-ball-second">
       <div class="skill-title">
         <img src="./././assets/server-network.svg" alt="" />
-        <p>Backend developer</p>
+        <p style="font-weight: 600;font-size: 1.2rem;">Backend developer</p>
       </div>
       <div class="language-container">
         <div class="language">
