--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,7 +5,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: 10vh;
+    //height: 10vh;
 
     .header-container{
         background-color: rgb(255, 255, 255);
@@ -34,7 +34,7 @@ body{
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        height: 10vh;
+        //height: 10vh;
 
         .container {
             display: inline-block;
